# polymarket

./: .gitignore  Procfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt
polymarket_momentum/: backtest.py  cost_model.py  cross_sectional.py  data.py  fetch.py  oos.py  oos_cross_sectional.py  ranking.py  run_backtest.py  run_cross_sectional.py  serve.py  snapshot_spreads.py  strategy.py  stratify_by_expiry.py  stratify_by_ofi.py  sweep.py  topic.py
polymarket_momentum/paper/: backfill_meta.py  config.py  db.py  fills.py  ledger.py  poller.py  universe.py
polymarket_momentum/sources/: __init__.py  base.py  kalshi.py  polymarket.py
polymarket_momentum/web/: app.py  config.py  paper_routes.py  routes.py  services.py
polymarket_momentum/web/static/: style.css
polymarket_momentum/web/templates/: base.html  dashboard.html  paper.html
